# zipity

./: Cargo.toml  LICENSE  README.md  template.html
api/: posts.rs  users.rs
cli/: main.rs  todo.md  zipity
routes/: index.md
src/: api_handler.rs  build_handler.rs  main.rs  page_handler.rs  robots_handler.rs  root_handler.rs  sitemap_handler.rs
static/: robots.txt  site.webmanifest  styles.css  template.html
